# lyzr

./: README.md  pyproject.toml  setup.py
cookbook/: rag_from_pdf.py  rag_from_webpage.py  rag_from_website.py  test_rag_from_docx.py  test_rag_from_txt.py
cookbook/chat/: chat_from_docx.py  chat_from_pdf.py  chat_from_txt.py  chat_from_webpage.py  chat_from_website.py  chat_from_youtube.py
cookbook/chatbot/: chat_from_pdf.py
cookbook/question_answering/: qa_from_pdf.py  qa_from_youtube.py  rag_from_docx.py  rag_from_pdf.py  rag_from_txt.py  rag_from_webpage.py  rag_from_website.py  rag_from_youtube.py
lyzr/: __init__.py
lyzr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lyzr/analysis/: recommendations.py
lyzr/base/: __init__.py  chatbot.py  qa_bot.py
lyzr/lyzr/: __init__.py  chat.py  llm.py  question_answering.py  service.py  vector_store.py
lyzr/utils/: __init__.py  chat_utils.py  document_reading.py  env_utils.py  pdf_reader.py  rag_utils.py  web_page_reader.py  webpage_reader.py  website_reader.py
tests/: test_rag_from_pdf.py  test_utils.py
