[tool.poetry]
name = "lyzr"
version = "0.1.3"
description = ""
authors = ["patel <khush@lyzr.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
openai = "^0.28.1"
litellm = "^0.13.1"
llama-index = "^0.8.61"
langchain = "^0.0.330"
python-dotenv = "^1.0.0"
tiktoken = "^0.5.1"
pdfminer-six = "20221105"
lancedb = "0.3.3"
beautifulsoup4 = "4.12.2"
docx2txt = "0.8" 
playwright = "1.39.0"
pytest-playwright = "0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"